<resources>
    <string name="app_name">Skyesque</string>
    <string name="br_app_name">Skyesque</string>
    <string name="app_moto">Your weather partner and companion</string>
    <string name="town_placeholder">Port Louis</string>
    <string name="date_placeholder">12th March, 2024</string>
    <string name="overview">Overview</string>
    <string name="details">Details</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="current_temperature_placeholder">24°C</string>
    <string name="current_temperature_only_placeholder">24</string>
    <string name="degrees_celsius">°C</string>
    <string name="degrees_only">°C</string>
    <string name="current_state_placeholder">Heavy Rainfall</string>
    <string name="wind_speed">Wind Speed</string>
    <string name="wind_speed_placeholder">20 km/h</string>
    <string name="humidity_placeholder">54%</string>
    <string name="sunshine_intensity_placeholder">4 of 10</string>
    <string name="today_s_summary">Today\'s Summary</string>
    <string name="view_full_week_forecast"><u>View 3 Day Forecast</u></string>
    <string name="time_placeholder">13:29</string>
    <string name="content_description">Image Content Description</string>
    <string name="day_of_week_placeholder">Wednesday</string>
    <string name="weekly_weather_summary">Weekly Weather Summary</string>
    <string name="br_username">Daniel\nGithiomi</string>
    <string name="user_details">User Details</string>
    <string name="edit">Edit</string>
    <string name="email_address_placeholder">Email Address</string>
    <string name="password_placeholder">Password</string>
    <string name="application_preferences">Application Preferences</string>
    <string name="dark_mode_theme">Dark Mode Theme</string>
    <string name="edit_preferences">Edit System Preferences</string>
    <string name="logout">Log Out</string>
    <string name="settings">Settings</string>
    <string name="weather_summary">Weather Summary</string>
    <string name="air_quality">Air Quality</string>
    <string name="air_quality_placeholder">4 - Medium Risk</string>
    <string name="uv_index">UV Index</string>
    <string name="uv_index_placeholder">1 - Low</string>
    <string name="rainfall">Rainfall</string>
    <string name="rainfall_amount_placeholder">280.7 MM</string>
    <string name="visibility">Overall Visibility</string>
    <string name="visibility_placeholder">3.4 Miles</string>
    <string name="profile">Profile</string>
    <string name="min_max_temperature_placeholder">20°C / 28°C</string>
    <string name="view_location_in_map">View Location in Map</string>
    <string name="wind_direction">Wind Direction</string>
    <string name="wind_direction_placeholder">South South Easterly</string>
    <string name="username">Username</string>
    <string name="log_in">Log in</string>
    <string name="create_a_new_account">Don\'t have an account? Create One</string>
    <string name="password">Password</string>
    <string name="weather_details">Weather Details</string>
    <string name="gcu_credentials">Daniel Githiomi - S2110911</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="home">Home</string>
    <string name="map">Map</string>
    <string name="title_activity_map">MapActivity</string>
</resources>