<?xml version="1.0" encoding="utf-8"?>
<!--Name                 Daniel Githiomi-->
<!--Student ID           S2110911-->
<!--Programme of Study   Computing - ALU Mauritius-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LL_summaryItem"
    android:layout_width="100dp"
    android:layout_height="150dp"
    android:layout_marginVertical="10dp"
    android:background="@drawable/summary_item_background"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/TV_summaryItemTemp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/current_temperature_placeholder"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/IV_summaryItemImage"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginVertical="10dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/cloud" />

    <TextView
        android:id="@+id/TV_summaryItemTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/time_placeholder"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="18sp" />

</LinearLayout>