<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/activity_background"
    android:fillViewport="true"
    tools:context=".HomeActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/IV_toProfile"
            android:layout_width="30dp"
            android:scaleType="fitCenter"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:layout_margin="20dp"
            android:clickable="true"
            android:background="@color/transparent"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_profile" />

        <TextView
            android:id="@+id/TV_townName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/IV_toProfile"
            android:fontFamily="@font/lilita_one"
            android:letterSpacing=".06"
            android:layout_marginBottom="5dp"
            android:text="@string/town_placeholder"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/TV_pinLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/TV_townName"
            android:layout_marginVertical="10dp"
            android:text="@string/view_location_in_map"
            android:drawablePadding="10dp"
            android:gravity="center_vertical"
            android:layout_centerHorizontal="true"
            android:textColor="@android:color/background_light"
            app:drawableStartCompat="@drawable/location_pin_24" />

        <TextView
            android:id="@+id/TV_currentDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/TV_pinLocation"
            android:layout_marginVertical="10dp"
            android:text="@string/date_placeholder"
            android:textAlignment="center"
            android:textColor="@android:color/background_light" />

        <androidx.cardview.widget.CardView
            android:id="@+id/CV_overviewDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/TV_currentDate"
            android:layout_centerHorizontal="true"
            android:layout_marginVertical="20dp"
            app:cardBackgroundColor="@color/inactive_blue"
            app:cardCornerRadius="15dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/TV_overview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/active_tab_background"
                    android:clickable="true"
                    android:paddingHorizontal="30dp"
                    android:paddingVertical="15dp"
                    android:text="@string/overview"
                    android:textColor="@color/white"
                    android:textSize="17sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/TV_details"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:paddingHorizontal="35dp"
                    android:paddingVertical="15dp"
                    android:text="@string/details"
                    android:textColor="@color/white"
                    android:textSize="17sp" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <FrameLayout
            android:id="@+id/FL_overviewDetails"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/CV_overviewDetails" />

    </RelativeLayout>

</ScrollView>