<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/activity_background"
    android:orientation="vertical"
    tools:context=".WeeklyForecastActivity">

    <ImageButton
        android:id="@+id/IB_backArrow"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginHorizontal="15dp"
        android:layout_marginVertical="15dp"
        android:background="@color/transparent"
        android:clickable="true"
        android:contentDescription="@string/content_description"
        android:src="@drawable/arrow_back_24" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:layout_marginHorizontal="15dp"
        app:cardBackgroundColor="@color/transparent"
        app:cardCornerRadius="15dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/day_sky"
            android:paddingVertical="30dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:drawablePadding="10dp"
                android:fontFamily="@font/lilita_one"
                android:letterSpacing=".05"
                android:text="@string/town_placeholder"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="24sp"
                app:drawableLeftCompat="@drawable/location_pin_24" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginHorizontal="30dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/TV_currentTemperature"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:fontFamily="@font/lilita_one"
                    android:text="@string/current_temperature_only_placeholder"
                    android:textColor="@color/white"
                    android:textSize="90sp" />

                <TextView
                    android:id="@+id/TV_degreesCelsius"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_toEndOf="@id/TV_currentTemperature"
                    android:fontFamily="@font/lilita_one"
                    android:gravity="top"
                    android:text="@string/degrees_celsius"
                    android:textColor="@color/white"
                    android:textSize="30sp" />

                <LinearLayout
                    android:id="@+id/LL_details"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="15dp"
                    android:layout_toEndOf="@id/TV_degreesCelsius"
                    android:gravity="end"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/IV_currentWeather"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:contentDescription="@string/content_description"
                        android:src="@drawable/sunny_24" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/current_state_placeholder"
                        android:textAlignment="textEnd"
                        android:textAllCaps="true"
                        android:textColor="@color/white"
                        android:textSize="17sp"
                        android:textStyle="bold" />

                </LinearLayout>

            </RelativeLayout>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/TV_todaySummary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginVertical="20dp"
        android:paddingHorizontal="5dp"
        android:text="@string/weekly_weather_summary"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/RV_weeklyForecast"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="15dp"
        android:orientation="vertical"
        tools:listitem="@layout/weekly_forecast_item" />

</LinearLayout>