<?xml version="1.0" encoding="utf-8"?>
<!--Name                 Daniel Githiomi-->
<!--Student ID           S2110911-->
<!--Programme of Study   Computing - ALU Mauritius-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash_screen_bg"
    tools:context=".MainActivity">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/IV_appLogo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="150dp"
        android:layout_marginBottom="70dp"
        android:contentDescription="@string/content_description"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/splash" />

    <!--    <ImageView-->
    <!--        android:id="@+id/IV_appLogo"-->
    <!--        android:layout_width="150dp"-->
    <!--        android:layout_height="150dp"-->
    <!--        android:layout_centerHorizontal="true"-->
    <!--        android:layout_marginTop="150dp"-->
    <!--        android:layout_marginBottom="70dp"-->
    <!--        android:contentDescription="@string/app_name"-->
    <!--        android:src="@drawable/weather_icon" />-->

    <TextView
        android:id="@+id/TV_appName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/IV_appLogo"
        android:fontFamily="@font/lilita_one"
        android:text="@string/br_app_name"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="65sp" />

    <TextView
        android:id="@+id/TV_appMoto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/TV_appName"
        android:layout_marginTop="30dp"
        android:text="@string/app_moto"
        android:textAlignment="center"
        android:textColor="@android:color/darker_gray"
        android:textSize="17sp" />

</RelativeLayout>