<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="5dp"
    android:layout_marginVertical="10dp"
    app:cardBackgroundColor="@color/transparent"
    app:cardCornerRadius="15dp">

    <RelativeLayout
        android:id="@+id/RL_weeklyForecast"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:background="@drawable/card_gradient_background"
        android:paddingHorizontal="20dp">

        <TextView
            android:id="@+id/TV_dayOfTheWeek"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/day_of_week_placeholder"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/IV_dailyWeatherImage"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_centerInParent="true"
            android:contentDescription="@string/content_description"
            android:src="@drawable/cloud" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/TV_minimumTemperature"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/current_temperature_placeholder"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="3dp"
                android:fontFamily="@font/lilita_one"
                android:text="/"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/TV_maximumTemperature"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/current_temperature_placeholder"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="bold" />

        </LinearLayout>


    </RelativeLayout>

</androidx.cardview.widget.CardView>